Update CNN for BreastCancer.ipynb

--- a/CNN for BreastCancer.ipynb
+++ b/CNN for BreastCancer.ipynb
@@ -69,6 +69,7 @@
     "        model.add(SeparableConv2D(64,(3,3),padding = \"same\"))\n",
     "        model.add(Activation(\"relu\"))\n",
     "        model.add(BatchNormalization(axis = channel_dim))\n",
+    "        model.add(MaxPool2D((2,2)))\n",
     "        model.add(SeparableConv2D(64,(3,3),padding = \"same\"))\n",
     "        model.add(Activation(\"relu\"))\n",
     "        model.add(BatchNormalization(axis = channel_dim))\n",
@@ -78,9 +79,11 @@
     "        model.add(SeparableConv2D(128,(3,3),padding = \"same\"))\n",
     "        model.add(Activation(\"relu\"))\n",
     "        model.add(BatchNormalization(axis = channel_dim))\n",
+    "        model.add(MaxPool2D((2,2)))\n",
     "        model.add(SeparableConv2D(128,(3,3),padding = \"same\"))\n",
     "        model.add(Activation(\"relu\"))\n",
     "        model.add(BatchNormalization(axis = channel_dim))\n",
+    "        model.add(MaxPool2D((2,2)))\n",
     "        model.add(SeparableConv2D(128,(3,3),padding = \"same\"))\n",
     "        model.add(Activation(\"relu\"))\n",
     "        model.add(BatchNormalization(axis = channel_dim))\n",
